# PyMatillion

./: .gitignore  404.html  LICENSE  README.md  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-publish-testpypi.yml  python-publish.yml  test-build-release.yml
pymatillion/: constants.py  matillion.py
pymatillion_examples/: index.html  pymatillion_examples.ipynb
reference/: index.html  reference.md
tests/: delete_job_response.json  delete_project_response.json  list_jobs_response.json  list_project_groups_response.json  list_projects_response.json  run_job_response.json  task_detail_response.json  test_matillion_client.py  unauthorized_response.json
