[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymatillion"
version = "1.0.13"
description = "This is a Python wrapper for interacting with the REST API for Matillion."
readme = "README.md"
authors = [
    {name = "Abhinav Tiwari", email = "abhinavtiwariusa84@gmail.com"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",

]
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "build", "twine", "mkdocs"]

[project.urls]
Homepage = "https://github.com/tiwari-abhi/PyMatillion"
Docs = "https://tiwari-abhi.github.io/PyMatillion/reference"

[tool.bumpver]
current_version = "1.0.13"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

[tool.setuptools]
py-modules = ["pymatillion"]